# semanticMCP

./: .gitignore  README.md  main.py  publishers_dict.py  pyproject.toml  requirements.txt
publishers/: acm_downloader.py  arxiv_downloader.py  elsevier_downloader.py  generic_downloader.py  ieee_downloader.py  springer_downloader.py
