[project]
name = "semantic-scholar-mcp"
version = "0.1.0"
description = "Semantic Scholar MCP server for academic paper search and download"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.14.2",
    "pybliometrics>=4.3",
    "httpx==0.27.2",
]

[project.scripts]
semantic-scholar-mcp = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "https://pypi.org/simple/"
default = true

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "main.py",
    "publishers/*.py",
    "README.md",
]
